--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
       </div>
     </section>
 
+    <section id="suscribete" class="container-fluid">
+      <div class="justify-content-center p-4 text-white w-100">
+        <h1 class="text-center">SUSCRÍBETE EN NUESTRA PLATAFORMA</h1>
+
+        <p class="text-center">
+          y obtén los mejores beneficios y seguridad
+        </p>
+        <div class="d-flex justify-content-center">
+          <button type="button" class="btn btn-outline-light">Empezar</button>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
