--- a/index.html
+++ b/index.html
@@ -25,6 +25,37 @@
     />
   </head>
   <body>
+    <header class="barra container-fluid bg-dark d-flex justify-content-center">
+      <nav class="navbar navbar-expand-lg navbar-dark container sticky-top">
+        <div class="container-fluid">
+          <h1 class="lobster-regular text-white">Desafio</h1>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNavAltMarkup"
+          >
+            <div class="navbar-nav roboto-regular">
+              <a class="nav-link active" aria-current="page" href="#">Merge</a>
+              <a class="nav-link" href="#">Add</a>
+              <a class="nav-link" href="#">Commit</a>
+              <a class="nav-link" href="#">Push</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+
     <div class="container">
       <h1>Ir a Github</h1>
       <a href="https://github.com/">
