nueva seccion con un parrafo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
         >
       </button>
     </div>
-
     <section class="container text-white">
       <div class="row text-center">
         <h1 class="roboto-bold pt-5">Acerca de github</h1>
@@ -113,11 +112,9 @@
         </div>
       </div>
     </section>
-
     <section id="suscribete" class="container-fluid">
       <div class="justify-content-center p-4 text-white w-100">
         <h1 class="text-center">SUSCRÍBETE EN NUESTRA PLATAFORMA</h1>
-
         <p class="text-center">
           y obtén los mejores beneficios y seguridad
         </p>
@@ -126,7 +123,7 @@
         </div>
       </div>
     </section>
-
+    <section><p>El mundo está en deuda con Alan Turing, el genial matemático inglés que descifró los códigos que los nazis enviaban con su máquina Enigma. Aunque gracias a su descubrimiento se salvaron millones de vidas, Turing tuvo que hacer frente a la intransigencia de su época, que lo convirtió en un paria y acabó con su vida.19-06-2023</p></section>
     
 
     <script
